--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,9 @@
 version: "3.8"
 
 services:
-  mc-site:
-    image: python:3.11-slim
-    container_name: mc-site
+  mc-dc-bot:
+    build: .
+    container_name: mc-dc-bot
     restart: unless-stopped
     ports:
-      - "8088:5000"
-    volumes:
-      - ./Site:/app
-    working_dir: /app
-    command: ["sh", "-c", "pip install Flask && python app.py"]
+      - "9925:9925"
